--- a/kitties-to-go/kitties-to-go.html
+++ b/kitties-to-go/kitties-to-go.html
@@ -1,1 +1,91 @@
-.mnb,mnb
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Kitties To Go!</title>
+    <style media="screen">
+
+    </style>
+    </head>
+    <body>
+      <section>
+      <header>
+        <h1>KITTIES TO GO!</h1>
+        </header>
+        <p>Seattle's premiere drive-thru cat rentals</p>
+<div class="topnav">
+  <a href="About">About</a>
+  <a href="Rates">Rate</a>
+  <a href="LiabilityRelease">Liability Release</a>
+  <a href="KittyProfilies">Kitties Profiles</a>
+  <a href="BookaCat">Book a Cat</a>
+  </div>
+</section>
+<section>
+<header>
+  <h2>Cat ipsum dolor sit amet, find something else more interesting, so
+catty ipsum mesmerizing birds sleep on my human’s head</h2>
+</header>
+<p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds
+sleep on my human’s head. Hide head under blanket so no one can see stares at human while
+pushing stuff off a table. Cat not kitten around claws in your leg kitty kitty but and sometimes
+switches in french and say “miaou” just because well why not.</p>
+<p><strong>Please stop looking at your phone an pet me. Lounge in the
+doorway eat and then sleep on your face meowwww meowwww
+– Jeremy</strong></p>
+</section>
+<section>
+<header>
+  <h3>THE KITIIES TO GO STORY!</h3>
+  </header>
+  <p>Fall asleep on the washing machine snuggles up to shoulders or knees and purrs you to sleep.
+Eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk
+then retire to the warmest spot on the couch to claw at the fabric before taking a catnap attempt to
+leap between furniture but woefully miscalibrate and bellyflop onto the floor; what’s your problem? i
+meant to do that now i shall wash myself intently cough and swat at dog. </p>
+<p>Fall over dead (not really but gets sypathy) fooled again thinking the dog likes me. Jump launch
+to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed hiss at
+vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
+</section>
+<aside class="side">
+  <article>
+  <header>
+      <h4>CATS IN THE NEWS</h4>
+      </header>
+      <p>Chew iPad power cord why must they do
+that, grab pompom in mouth and put in
+water dish.</p>
+<p><a href="Findoutmore">Find out more>></a>
+
+  <p>Chew iPad power cord why must they do
+that, grab pompom in mouth and put in
+water dish.</p>
+<p><a href="Findoutmore">Find out more>></a></p>
+
+</article>
+  <article>
+  <header>
+    <h5>CAT OF THE WEEK</h5>
+    </header>
+    <img src="images/sidebar-cat.jpg" alt="picture of cat">
+    <p>Stare at imaginary bug love blinks and purr purr purr purr
+      <a href="BookNow">Book Now>></a></p>
+  </article>
+  </aside>
+
+
+    <footer>
+      <img src="images/footer-image.jpg" alt="pis of cats">
+      <img src="cat-logo.png.webloc" alt="logo of cat">
+      <p>Aborpos nisto inci tet aut que volupti beruptiberro to ex
+esseque invenienihil imaximu scideru ptistiusam consequunt</p>
+<ul class="footer">
+  <li><a href="Footerlink1">Footer Link 1/</a>
+  <li><a href="Footerlink2">Footer Link 2/</a>
+    <li><a href="Footerlink3">Footer Link 3/</a>
+      <li><a href="Footerlink4">Footer Link 4/</a>
+    </ul>
+  <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
+    </footer>
+</body>
+</html>
